src/objects/BloodSpecimenInfo__c.object
<CustomObject>
    <fields>
        <fullName>BloodSpecimenForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BloodSpecimenForm</label>
        <referenceTo>BloodSpecimenForm__c</referenceTo>
        <relationshipLabel>BloodSpecimenInfo</relationshipLabel>
        <relationshipName>BloodSpecimenInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Integration_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integration Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Reason_samples_not_shipped__c</fullName>
        <label>Other (Reason samples not shipped)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_samples_not_shipped__c</fullName>
        <label>Reason samples not shipped</label>
        <picklist>
            <picklistValues>
                <fullName>Spilled on floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thawed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <label>Shipped?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specimen_ID__c</fullName>
        <label>Specimen ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_bloodspecimeninfo_Id__c</fullName>
        <label>pg_bloodspecimeninfo_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BloodSpecimenInfo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BloodSpecimenInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>